--- a/modelo22.html
+++ b/modelo22.html
@@ -9,7 +9,7 @@
          var dataLayer = dataLayer || [];
       </script>
       <title>Dayana Nicolle Vereau Rodriguez 15 Años</title>
-      <link rel="canonical" href="https://eventobonito.com/invitaciones-digitales-de-xv/clasicas/modelo22/" />
+      <link rel="canonical" href="Luis Marin" />
       <meta property="og:locale" content="es_ES" />
       <meta property="og:type" content="article" />
       <meta property="og:title" content="Dayana Nicolle Vereau Rodriguez 15 años" />
