--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             </div>
          </section>
          <section class="elementor-section elementor-top-section elementor-element elementor-element-355ddd9f elementor-hidden-desktop elementor-hidden-tablet elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="355ddd9f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-            <div class="elementor-background-overlay"></div>
+            <div class="elementor-background-overlay" style="background-image: url(img/1.jpg)!important; background-size: contain; opacity: unset;"></div>
             <div class="elementor-container elementor-column-gap-default">
                <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-74ca61f1" data-id="74ca61f1" data-element_type="column" data-settings="{&quot;animation_mobile&quot;:&quot;none&quot;,&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;none&quot;}">
                   <div class="elementor-widget-wrap elementor-element-populated">
@@ -751,8 +751,7 @@
                               </div>
                               <div class="elementor-icon-box-content">
                                  <h3 class="elementor-icon-box-title">
-                                    <span  >
-                                    Desliza						</span>
+                                    <span  style="color: #000;">Desliza<span>
                                  </h3>
                               </div>
                            </div>
