--- a/index.html
+++ b/index.html
@@ -727,7 +727,10 @@
                </div>
             </div>
          </section>
-         <section class="elementor-section elementor-top-section elementor-element elementor-element-355ddd9f elementor-hidden-desktop elementor-hidden-tablet elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="355ddd9f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+         <section class="elementor-section elementor-top-section elementor-element elementor-element-355ddd9f elementor-hidden-desktop elementor-hidden-tablet elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="355ddd9f" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}"
+         style="    background-image: url(img/6.jpg);
+         background-color: unset;
+         background-size: cover;">
             <div class="elementor-background-overlay" style="background-image: url(img/1.jpg)!important; background-size: contain; opacity: unset;"></div>
             <div class="elementor-container elementor-column-gap-default">
                <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-74ca61f1" data-id="74ca61f1" data-element_type="column" data-settings="{&quot;animation_mobile&quot;:&quot;none&quot;,&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;none&quot;}">
@@ -778,7 +781,10 @@
             <div class="elementor-container elementor-column-gap-no">
                <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-4e86ba27" data-id="4e86ba27" data-element_type="column">
                   <div class="elementor-widget-wrap elementor-element-populated">
-                     <section class="elementor-section elementor-inner-section elementor-element elementor-element-12114a79 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="12114a79" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;#f0f5f9&quot;,&quot;animation&quot;:&quot;none&quot;}" style="background-color: #f0f5f9!important;">
+                     <section class="elementor-section elementor-inner-section elementor-element elementor-element-12114a79 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="12114a79" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;#f0f5f9&quot;,&quot;animation&quot;:&quot;none&quot;}" style="background-color: #f0f5f9!important;
+                     background-image: url(img/6.jpg);
+         background-color: unset;
+         background-size: cover;">
                         <img src="https://i.pinimg.com/originals/5c/39/91/5c39915736c68fc98b3bd54a181bd230.gif" style="z-index: 9999;position: absolute;width: 10rem;">
                         
                         <div class="elementor-background-overlay" style="background-image: url(img/1.jpg)!important; background-size: contain; opacity: unset;"></div>
