--- a/index.html
+++ b/index.html
@@ -755,8 +755,8 @@
 																			<div class="uael-grid-item-content">
 																				<figure class="uael-grid-img uael-grid-gallery-img uael-ins-hover elementor-clickable">
 																					<div class="uael-grid-img-thumbnail uael-ins-target">
-                                                               <video autoplay muted loop id="myVideo" >
-                                                                  <source src="img/IMG_8702.mp4" type="video/mp4">
+                                                               <video playsinline autobuffer autoplay muted loop id="myVideo" >
+                                                                  <source src="img/IMG_8702.mp4" type="video/mp4; codecs="avc1.4D401E, mp4a.40.2">
                                                                </video>
                                                                </div>
                                                                <div class="uael-grid-img-overlay"></div>
@@ -929,7 +929,7 @@
                                                                 
                                                             </div>
                                                             <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-                                                               <a href="https://wa.me/+5491122934235?text=Confirmo mi asistencia" target="_blank" class="elementor-button elementor-size-sm" type="submit">CONFIRMAR ASISTENCIA</a>
+                                                               <a href="https://wa.me/+5491122934235?text=Confirmo mi asistencia" target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">CONFIRMAR ASISTENCIA</a>
                                                                 <!-- <button class="elementor-button elementor-size-sm" type="submit" id="btn_send_counter">
                                                                     <span class="elementor-button-content-wrapper">
                                                                         <span class="elementor-button-text">CONFIRMAR</span>
@@ -1121,7 +1121,7 @@
                                                                 
                                                             </div>
                                                             <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-                                                               <a href="https://wa.me/+5491122934235?text=🎶🎶🎶🎶Agrega estas canciones a la playlist...   " target="_blank" class="elementor-button elementor-size-sm" type="submit">Agregá esta canción</a>                                                      
+                                                               <a href="https://wa.me/+5491122934235?text=🎶🎶🎶🎶Agrega estas canciones a la playlist...   " target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">Agregá esta canción</a>                                                      
                                                             </div>
                                                         </div>
                                                     </form>
