--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
                                                                 
                                                             </div>
                                                             <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-                                                               <a href="https://wa.me/+5491122934235?text=🎶🎶🎶🎶Agrega estas canciones a la playlist...   " target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">Agregá esta canción</a>                                                      
+                                                               <a href="https://wa.me/+5491122934235?text=🎶🎶🎶🎶Agrega estas canciones a la playlist...   " target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">Agregar canción</a>                                                      
                                                             </div>
                                                         </div>
                                                     </form>
