--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                                                                 
                                                             </div>
                                                             <div class="elementor-field-group elementor-column elementor-field-type-submit elementor-col-100 e-form__buttons">
-                                                               <a href="https://wa.me/+5491122934235?text=Confirmo mi asistencia" target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">CONFIRMAR ASISTENCIA</a>
+                                                               <a href="https://wa.me/+5491122934235?text=Confirmo mi asistencia" target="_blank" class="elementor-button elementor-size-sm" type="submit" style="letter-spacing: none!important;">CONFIRMAR</a>
                                                                 <!-- <button class="elementor-button elementor-size-sm" type="submit" id="btn_send_counter">
                                                                     <span class="elementor-button-content-wrapper">
                                                                         <span class="elementor-button-text">CONFIRMAR</span>
