--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                                                                 <strong>Regalo obligatorio:</strong> tu presencia.
                                                             </p>
                                                             <p class="elementor-icon-box-description">
-                                                               <strong></strong>Regalo Opcional:</strong> Sialgo me vas a dar y no sabes que, te dejo mi alias
+                                                               Si estás pensando en mi regalo y no sabés qué regalarme, acá te dejo mi alias:
                                                            </p>
                                                         </div>
                                                     </div>
